# ModalZ3

./: CMakeLists.txt  README.md
balsiger/: Makefile  balsiger.l  balsiger.y
cmake/: FindZ3.cmake
examples/: abox-relations.smt2  abox.smt2  blocking-2.smt2  blocking-long.smt2  blocking-long.smt2.dis  blocking.smt2  blocking.smt2.dis  box-p.smt2  counting.smt2  dia-disj-p-q.smt2  diamond-diamond-p-box-box-not-p.smt2  diamond-p-box-not-p-2.smt2  diamond-p-box-not-p.smt2  diamond-p-diamond-not-p.smt2  diamond-p.smt2  duplicate-box-p-diamond-q.smt2  failed-1.smt2  failed-10.smt2  failed-11.smt2  failed-2.smt2  failed-3.smt2  failed-4.smt2  failed-5.smt2  failed-6.smt2  failed-7.smt2  failed-8.smt2  failed-9.smt2  paper.smt2  pizza.owl.smt2  pizza.owl.smt2.dis  simplify-1.smt2  simplify-2.smt2  theory-blocking.smt2  theory.smt2  trans-blocking.smt2  trans-prop-1.smt2  trans-prop-2.smt2  trans-prop-3.smt2  trans-prop-4.smt2  trans-reachable-1.smt2  (+2 more)
examples/k_branch_p/: k_branch_p.0001.ksp  k_branch_p.0001.smt2  k_branch_p.0002.ksp  k_branch_p.0002.smt2  k_branch_p.0003.ksp  k_branch_p.0003.smt2  k_branch_p.0004.ksp  k_branch_p.0004.smt2  k_branch_p.0005.ksp  k_branch_p.0005.smt2  k_branch_p.0006.ksp  k_branch_p.0006.smt2  k_branch_p.0007.ksp  k_branch_p.0007.smt2  k_branch_p.0008.ksp  k_branch_p.0008.smt2  k_branch_p.0009.ksp  k_branch_p.0009.smt2  k_branch_p.0010.ksp  k_branch_p.0010.smt2  k_branch_p.0011.ksp  k_branch_p.0011.smt2  k_branch_p.0012.ksp  k_branch_p.0012.smt2  k_branch_p.0013.ksp  k_branch_p.0013.smt2  k_branch_p.0014.ksp  k_branch_p.0014.smt2  k_branch_p.0015.ksp  k_branch_p.0015.smt2  k_branch_p.0016.ksp  k_branch_p.0016.smt2  k_branch_p.0017.ksp  k_branch_p.0017.smt2  k_branch_p.0018.ksp  k_branch_p.0018.smt2  k_branch_p.0019.ksp  k_branch_p.0019.smt2  k_branch_p.0020.ksp  k_branch_p.0020.smt2
examples/k_path_p/: k_path_p.0001.ksp  k_path_p.0001.smt2  k_path_p.0002.ksp  k_path_p.0002.smt2  k_path_p.0003.ksp  k_path_p.0003.smt2  k_path_p.0004.ksp  k_path_p.0004.smt2  k_path_p.0005.ksp  k_path_p.0005.smt2  k_path_p.0006.ksp  k_path_p.0006.smt2  k_path_p.0007.ksp  (+27 more)
owl/: owl2smtlib
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/strategies/: CMakeLists.txt  expr_info.h  iterative_deepening.cpp  iterative_deepening.h  iterative_deepening_quant.cpp  iterative_deepening_quant.h  iterative_deepening_unrolled.cpp  iterative_deepening_unrolled.h  lazy_up.cpp  lazy_up.h  modal_to_euf.cpp  modal_to_euf.h  modal_tree.cpp  modal_tree.h  standard_translation.cpp  standard_translation.h  strategy.cpp  strategy.h  syntax_tree.cpp  syntax_tree.h
src/test/: CMakeLists.txt  random_formula.cpp  random_formula.h  test.cpp
(+186 files in other folders)
